==> vjt081103/BTL_CSDL/smart/User/stm32f1_rc522.c <==
#include "stm32f1_rc522.h"
#define MFRC522_SPI                SPI2
#define MFRC522_SPI_GPIO_RCC       RCC_APB2Periph_GPIOB
#define MFRC522_SPI_RCC            RCC_APB1Periph_SPI2
#define MFRC522_SPI_GPIO           GPIOB
#define MFRC522_SCK_PIN            GPIO_Pin_13
#define MFRC522_MISO_PIN           GPIO_Pin_14
#define MFRC522_MOSI_PIN           GPIO_Pin_15
#define MFRC522_CS_RCC             RCC_APB2Periph_GPIOB
#define MFRC522_CS_GPIO            GPIOB
#define MFRC522_CS_PIN             GPIO_Pin_12

uint8_t RC522_SPI_Transfer(uint8_t data)
{
	while(SPI_I2S_GetFlagStatus(MFRC522_SPI, SPI_I2S_FLAG_TXE)==RESET);
	SPI_I2S_SendData(MFRC522_SPI,data);

	while(SPI_I2S_GetFlagStatus(MFRC522_SPI, SPI_I2S_FLAG_RXNE)==RESET);
	return SPI_I2S_ReceiveData(MFRC522_SPI);
}

void Write_MFRC522(uchar addr, uchar val)
{
	/* CS LOW */
	GPIO_ResetBits(MFRC522_CS_GPIO, MFRC522_CS_PIN);

	//Dinh dang dia chi:0XXXXXX0
	RC522_SPI_Transfer((addr<<1)&0x7E);	
	RC522_SPI_Transfer(val);
	
	/* CS HIGH */
	GPIO_SetBits(MFRC522_CS_GPIO, MFRC522_CS_PIN);
}

uchar Read_MFRC522(uchar addr)
{
	uchar val;

	/* CS LOW */
	GPIO_ResetBits(MFRC522_CS_GPIO, MFRC522_CS_PIN);

	//Dinh dang dia chi:1XXXXXX0
	RC522_SPI_Transfer(((addr<<1)&0x7E) | 0x80);	
	val = RC522_SPI_Transfer(0x00);
	
	/* CS HIGH */
	GPIO_SetBits(MFRC522_CS_GPIO, MFRC522_CS_PIN);
	
	return val;	
	
}

void MFRC522_Init(void)
{
		GPIO_InitTypeDef GPIO_InitStructure;
    // Enable GPIO and SPI2 clock
    RCC_APB2PeriphClockCmd(MFRC522_CS_RCC | MFRC522_RST_RCC | MFRC522_SPI_GPIO_RCC | RCC_APB2Periph_AFIO, ENABLE);
    RCC_APB1PeriphClockCmd(MFRC522_SPI_RCC, ENABLE);

    // Configure CS pin as output push-pull
    
    GPIO_InitStructure.GPIO_Pin = MFRC522_CS_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_Init(MFRC522_CS_GPIO, &GPIO_InitStructure);

    // Configure RST pin as output push-pull
    GPIO_InitStructure.GPIO_Pin = MFRC522_RST_PIN;
    GPIO_Init(MFRC522_RST_GPIO, &GPIO_InitStructure);

    // Set CS and RST pins high
    GPIO_SetBits(MFRC522_CS_GPIO, MFRC522_CS_PIN);
    GPIO_SetBits(MFRC522_RST_GPIO, MFRC522_RST_PIN);

    // Initialize SPI2
    MFRC522_SPI_Init();

    // Reset MFRC522
    MFRC522_Reset();

    // Configure MFRC522 registers
    Write_MFRC522(TModeReg, 0x8D);       // Tauto=1; f(Timer) = 6.78MHz/TPreScaler
    Write_MFRC522(TPrescalerReg, 0x3E);  // TModeReg[3..0] + TPrescalerReg
    Write_MFRC522(TReloadRegL, 30);
    Write_MFRC522(TReloadRegH, 0);
    Write_MFRC522(TxAutoReg, 0x40);      // 100%ASK
    Write_MFRC522(ModeReg, 0x3D);        // CRC initial value 0x6363

    // Turn on the antenna
    AntennaOn();
}
